# OpenClaw-MiroSearch

./: .dockerignore  .env.compose.example  .gitignore  AGENTS.md  OPEN_SOURCE_ATTRIBUTION.md  README.md  README_en.md  README_zh.md  compose.host-network.yaml  compose.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run-tests.yml
apps/api-server/: .env.example  Dockerfile  README.md  deps.py  main.py  models.py  pyproject.toml  settings.py  worker.py  worker_healthcheck.py
apps/api-server/middleware/: auth.py  rate_limit.py
apps/api-server/routers/: metrics.py  research.py
apps/api-server/services/: __init__.py  pipeline_runtime.py  profile_resolver.py  task_event_sink.py  task_queue.py  task_store.py
apps/api-server/tests/: test_api_server.py  test_pipeline_runtime_overrides.py  test_profile_resolver.py  test_rate_limit.py  test_research_queue_api.py  test_research_worker.py  test_sse_stream.py  test_task_event_sink.py  test_task_store.py  test_worker_healthcheck.py
apps/api-server/workers/: __init__.py  research_worker.py
apps/collect-trace/: README.md
apps/gradio-demo/: .env.example  (+7 more)
deploy/: README.md
docs/: AI_AGENT_INTEGRATION.md  API_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_en.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_en.md  CONTRIBUTING.md  CONTRIBUTING_en.md  DEPLOY.md  DEPLOY_DOCKER_COMPOSE.md  GOVERNANCE.md  LOCAL-TOOL-DEPLOYMENT.md  QA.md  README.md  RELEASE.md  ROADMAP.md  SCRAPING_ITERATION_PLAN.md  SECURITY.md  SECURITY_en.md  SUPPORT.md
(+81 files in other folders)
